Bug 22636 - rendering problems with cairo engine (firefox 3.0, 3.5)
Summary: rendering problems with cairo engine (firefox 3.0, 3.5)
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 23383 23625 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-07-06 10:56 UTC by Paulo Dias
Modified: 2011-10-11 11:25 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Possible fix (17.31 KB, patch)
2009-07-06 11:39 UTC, Michel Dänzer
no flags Details | Splinter Review
snap1 firefox render error (221.48 KB, image/png)
2009-07-06 11:55 UTC, Paulo Dias
no flags Details
arora correct colors (211.71 KB, image/png)
2009-07-06 11:55 UTC, Paulo Dias
no flags Details

Description Paulo Dias 2009-07-06 10:56:32 UTC
with latest ddx/mesa/drm i get strange rendering color problems only with cairo engine used by firefox for example. if i go to a site with offending colors (like padoca.wordpress.com), the grey/cyan background is rendered almost black instead of the pattern, and i get A LOT of this in syslog:

Jul  6 14:49:52 kerberos kernel: [ 6933.106204] [drm:r300_cs_track_check] *ERROR* [drm] No buffer for color buffer 0 !
Jul  6 14:49:52 kerberos kernel: [ 6933.106209] [drm:radeon_cs_ioctl] *ERROR* Invalid command stream !

and by a LOT i really mean a LOT :D

xorg is xorg-server 1.6.99.1+git20090705.fd4eed69-0~padoka1 (groo@kerberos).

best regards
Comment 1 Michel Dänzer 2009-07-06 11:39:43 UTC
Created attachment 27422 [details] [review]
Possible fix

Does it still happen with current xf86-video-ati Git?

If so, does this patch fix it?
Comment 2 Paulo Dias 2009-07-06 11:54:52 UTC
(In reply to comment #1)
> Created an attachment (id=27422) [details]
> Possible fix
> 
> Does it still happen with current xf86-video-ati Git?
> 
> If so, does this patch fix it?
> 

half fixed, messages and syslog dont dump any errors anymore, but i still get the wrong colors, see snap1 for firefox and snap2 for arora that uses the qt render (i enabled it by default) and doesnt suffer from the aforementioned bug.
Comment 3 Paulo Dias 2009-07-06 11:55:25 UTC
Created attachment 27426 [details]
snap1 firefox render error
Comment 4 Paulo Dias 2009-07-06 11:55:58 UTC
Created attachment 27427 [details]
arora correct colors
Comment 5 Michel Dänzer 2009-08-11 11:09:50 UTC
Does

    Option "EXANoComposite"

work around the problem?
Comment 6 Paulo Dias 2009-08-11 12:02:08 UTC
(In reply to comment #5)
> Does
> 
>     Option "EXANoComposite"
> 
> work around the problem?
> 

yes, it does, but then i have a lot of render problems with kde4 (icons not showing in kde systray for ex).

Comment 7 Michel Dänzer 2009-09-01 06:24:07 UTC
*** Bug 23625 has been marked as a duplicate of this bug. ***
Comment 8 Michel Dänzer 2009-09-01 06:32:16 UTC
(In reply to comment #6)
> yes, it does, but then i have a lot of render problems with kde4 (icons not
> showing in kde systray for ex).

I think that was a regression in pixman 0.15.x which should be fixed in 0.16.

So the problem only happens with KMS, right? Does it not happen when booting without KMS even using the same driver binary?
Comment 9 rem11_1999 2009-09-01 06:51:52 UTC
I've just updated pixman to latest git, and recompile xorg-server but no change, same corrupted background
Comment 10 Michel Dänzer 2009-09-01 07:05:07 UTC
(In reply to comment #9)
> I've just updated pixman to latest git, and recompile xorg-server but no
> change, same corrupted background

That paragraph was only referring to the problems with ExaNoComposite.
Comment 11 Michel Dänzer 2009-09-02 00:52:15 UTC
Oh my, the patch had the dst/src pictures reversed in the PrepareComposite call...

Fixed now in commit 794ae743c305331741e7cf45dd71c755fe325ed5 .
Comment 12 Paulo Dias 2009-09-02 07:29:35 UTC
i can confirm it fixed the bug, thank you very much :)
Comment 13 Jeremy Huddleston Sequoia 2011-10-11 11:25:48 UTC
*** Bug 23383 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.