EXA: Fix Composite restart dst/src switcheroo.

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=22636 .

Now, where's that brown paper bag? :}